# framework-libs-rs

./: .gitignore  .nextest.toml  .rustfmt.toml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  codeql.yaml
crates/build_info/: Cargo.toml  README.md  build.rs
crates/build_info/src/: cargo_workspace.rs  lib.rs  vergen.rs  vergen_macros.rs
crates/hello/: Cargo.toml
crates/hello/src/: lib.rs
crates/hyperswitch_masking/: Cargo.toml  README.md
crates/hyperswitch_masking/src/: bytes.rs  cassandra.rs  lib.rs  maskable.rs  secret.rs  serde.rs  strategy.rs  strong_secret.rs
crates/hyperswitch_masking/tests/: basic.rs
crates/kafka-writer/: Cargo.toml
crates/kafka-writer/src/: builder.rs  lib.rs  metrics.rs  writer.rs
crates/log_utils/: Cargo.toml  README.md
crates/log_utils/src/: formatter.rs  lib.rs  storage.rs  tracing.rs
crates/log_utils/src/tracing/: formatter.rs  storage.rs
crates/tracing-kafka/: Cargo.toml  README.md
crates/tracing-kafka/src/: builder.rs  lib.rs  writer.rs
examples/vergen_integration/: Cargo.toml  README.md  build.rs
examples/vergen_integration/src/: main.rs
