[package]
name = "build_info"
description = ""
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
cargo_workspace = ["dep:cargo_metadata"]
framework_libs_members_env = []

[dependencies]
cargo_metadata = { version = "0.19.2", optional = true }

[build-dependencies]
cargo_metadata = { version = "0.19.2", optional = true }

[lints]
workspace = true
