[package]
name = "build_info"
description = "Utilities to obtain information about the build environment"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
cargo-workspace-build = ["dep:cargo_metadata"]
cargo-workspace = []
vergen-gix-build = ["dep:vergen-gix"]
vergen-gix = []
framework-libs-members-env = ["dep:cargo_metadata", "cargo-workspace"]

[dependencies]
cargo_metadata = { version = "0.19.2", optional = true }
vergen-gix = { version = "1.0.3", features = ["build", "cargo", "rustc"], optional = true }

[build-dependencies]
cargo_metadata = { version = "0.19.2", optional = true }

[lints]
workspace = true
