[package]
name = "hyperswitch_masking"
description = "Personal Identifiable Information protection. Wrapper types and traits for secret management which help ensure they aren't accidentally copied, logged, or otherwise exposed (as much as possible), and also ensure secrets are securely wiped from memory when dropped."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]
default = ["alloc", "serde", "diesel", "time"]
alloc = ["zeroize/alloc"]
bytes = ["dep:bytes"]
cassandra = ["dep:scylla"]
proto_tonic = ["dep:bytes", "dep:prost"]
serde = ["dep:serde", "dep:serde_json"]
time = ["dep:time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
bytes = { version = "1.11", optional = true }
diesel = { version = "2.2", features = ["postgres", "serde_json", "time"], optional = true }
erased-serde = "0.4"
prost = { version = "0.14", optional = true }
scylla = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
subtle = "2.6.1"
time = { version = "0.3", optional = true, features = ["serde-human-readable"] }
url = { version = "2.5", features = ["serde"] }
zeroize = { version = "1.8", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
