[package]
name = "kafka-writer"
version = "0.1.0"
edition = "2021"
description = "A generic Kafka writer implementation for tracing subscriber"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
rdkafka = "0.36"
thiserror = "1.0"

# Optional dependencies for metrics
once_cell = { version = "1.19", optional = true }
prometheus = { version = "0.13", optional = true }

[features]
default = []
kafka-metrics = ["dep:once_cell", "dep:prometheus"]
