[package]
name = "log_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"] }
gethostname = "0.4.3"
rustc-hash = "1.1.0"
tracing-appender = "0.2.3"
thiserror = "1.0"

[lints]
workspace = true
