[package]
name = "log_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"] }
gethostname = "1.0.2"
rustc-hash = "2.1.1"
tracing-appender = "0.2.3"
thiserror = "2.0"

[lints]
workspace = true
