[package]
name = "log_utils"
description = "Utilities for logging in Rust applications"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
tracing = [
    "dep:gethostname",
    "dep:rustc-hash",
    "dep:serde",
    "dep:serde_json",
    "dep:thiserror",
    "dep:time",
    "dep:tracing",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
]

[dependencies]
gethostname = { version = "1.0.2", optional = true }
rustc-hash = { version = "2.1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2.0", optional = true }
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"], optional = true }

[lints]
workspace = true
