[package]
name = "vergen_integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
build_info = { path = "../../crates/build_info", features = ["vergen-gix"] }

[build-dependencies]
build_info = { path = "../../crates/build_info", features = ["vergen-gix-build"] }
